--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
@@ -99,7 +99,7 @@
                             }
                             else
                             {
-                                <button type="button" class="acart" style="color:white; background-color: grey" disabled>
+                                <button type="button" class="acart disabled-btn" disabled>
                                     <span>Add to Basket</span>
                                 </button>
                             }
