--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
@@ -44,10 +44,10 @@
                             </h5>
                             <div id="info" class="collapse footer-collapse">
                                 <ul class="list-unstyled">
-                                    <li><a href="about-us">About Us</a></li>
-                                    <li><a href="privacy-policy">Privacy Policy</a></li>
-                                    <li><a href="privacy-policy">Terms &amp; Conditions</a></li>
-                                    <li><a href="get-started">Contact Us</a></li>
+                                    <li><a href="/about-us">About Us</a></li>
+                                    <li><a href="/privacy-policy">Privacy Policy</a></li>
+                                    <li><a href="/privacy-policy">Terms &amp; Conditions</a></li>
+                                    <li><a href="/get-started">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -58,9 +58,9 @@
                             </h5>
                             <div id="account" class="collapse footer-collapse">
                                 <ul class="list-unstyled lastb">
-                                    <li><a href="@Url.Action("Index","Home")">My Account</a></li>
-                                    <li><a href="#">Order History</a></li>
-                                    <li><a href="#">Wish List</a></li>
+                                    <li><a href="@Url.Action("Account","User")">My Account</a></li>
+                                    <li><a href="@Url.Action("OrderHistory","User")">Order History</a></li>
+                                    <li><a href="@Url.Action("WishList","User")">Wish List</a></li>
                                 </ul>
                             </div>
                         </div>
