--- a/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
@@ -450,7 +450,7 @@ div.required .control-label:before {
 
 .cart-menu .dropdown-menu {
     min-width: 200px;
-    width: 300px;
+    width: 305px;
     position: absolute;
     right: 0;
     left: unset !important;
@@ -469,6 +469,7 @@ div.required .control-label:before {
 @media(min-width: 768px) {
     .cart-menu .dropdown-menu {
         margin: 0 14px;
+        padding: 0 10px;
     }
 }
 
@@ -2012,17 +2013,27 @@ header {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    max-width: 180px;
+    width: 180px;
     padding-bottom: 1px;
 }
-
-    .caption h4 a {
-        color: #000;
-        font-size: 13px;
-        transition: all 0.3s ease-out 0s;
-        letter-spacing: 0.5px;
-        text-transform: capitalize;
+#content .product-list .caption h4 {
+    overflow: unset !important;
+    white-space: unset !important;
+    text-overflow: unset !important;
+    width:unset !important;
+}
+@media (max-width: 767px) {
+    #content .product-list .caption h4 {
+        width:235px !important;
     }
+}
+.caption h4 a {
+    color: #000;
+    font-size: 13px;
+    transition: all 0.3s ease-out 0s;
+    letter-spacing: 0.5px;
+    text-transform: capitalize;
+}
 
         .caption h4 a:hover,
         .caption h4:hover {
@@ -5238,8 +5249,8 @@ ul.list-inline > li.li-mhp-menu:hover > ul.mhp-menu {
 }
 
 #accordion input {
-    width: 1vw;
-    height: 1vw;
+    width: 18px;
+    height: 18px;
 }
 
 
