--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
@@ -87,9 +87,9 @@
                             }
                             else
                             {
-                                <li><a href="@Url.Action("Index","Home")"><i class="fa fa-user"></i>@ViewBag.UserName</a></li>
-                                <li><a href="#"><i class="fa fa-cart-arrow-down"></i>Order History</a></li>
-                                <li><a href="#"><i class="fa fa-heart"></i>Wish List</a></li>
+                                <li><a href="@Url.Action("Account","User")"><i class="fa fa-user"></i>@ViewBag.UserName</a></li>
+                                <li><a href="@Url.Action("OrderHistory","User")"><i class="fa fa-cart-arrow-down"></i>Order History</a></li>
+                                <li><a href="@Url.Action("WishList","User")"><i class="fa fa-heart"></i>Wish List</a></li>
                             }
 
                             @if (@ViewBag.LoginDetail == "Login")
@@ -100,7 +100,6 @@
                             {
                                 <li><a href="@Url.Action("logout", "User")"><i class="fa fa-sign-out"></i>Logout</a></li>
                             }
-                            @*<li><a href="#" id="wishlist-total-mobile"><i class="fa fa-heart"></i>Wish List (0)</a></li>*@
                         </ul>
                     </li>
                     <li id="cart-mobile" class="cart-menu">
@@ -108,13 +107,50 @@
                             <svg width="28px" height="26px">
                                 <use xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#hcart"></use>
                             </svg>
-                            <span id="cart-total-mobile">0</span>
+                            <span id="cart-total-mobile">@(ViewBag.CartItemCount == 0 ? 0 : ViewBag.CartItemCount)</span>
                         </button>
-                        <ul class="dropdown-menu pull-right">
+                    <ul id="cart-dropdown-menu" class="dropdown-menu  cart-menu-height" style="overflow:auto">
+                        @if (ViewBag.CartItemCount != 0)
+                        {
+                            <li>
+                                <table>
+                                    <tbody>
+                                        @foreach (var item in ViewBag.CartItems)
+                                        {
+                                            <tr>
+
+                                                <td><a href="@Url.Action("AddToCart","Products")"><img src=@(!string.IsNullOrEmpty(item.ProductMaster.DefaultImage)? ViewBag.BaseFilePath + item.ProductMaster.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif") alt="@(item?.ProductMaster?.Name)"></a></td>
+                                                <td>
+                                                    <div class="ordered-items">
+                                                        <p>
+                                                            <a href="@Url.Action("AddToCart","Products")">@(item.ProductMaster?.Name)<br /><span style="font-weight:bold;">Sku:</span>@(item.ProductMaster?.SKUCode)<br /><span style="font-weight:bold;">Qty:</span>@(item.Qty)</a>
+                                                        </p>
+
+                                                        @*<ul>
+                                            <li>
+                                                Sku: <span>@(item.ProductMaster?.SKUCode)</span>
+                                            </li>
+                                            <li>Size: <span>M</span></li>
+                                            <li>
+                                                Quantity: <span>@item.Qty</span>
+                                            </li>
+                                        </ul>*@
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                                @* <a href="@Url.Action("AddToCart","Products")">Go to shopping cart</a>*@
+                            </li>
+                        }
+                        else
+                        {
                             <li>
                                 <p class="text-center">Your Basket is empty!</p>
                             </li>
-                        </ul>
+                        }
+                    </ul>
                     </li>
                 </ul>
             </div>
