--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_OnSalePartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_OnSalePartial.cshtml
@@ -67,7 +67,7 @@
                                                 }
                                                 else
                                                 {
-                                                    <button type="button" class="acart" style="color:white; background-color: grey" disabled>
+                                                    <button type="button" class="acart disabled-btn" disabled>
                                                         <span>Add to Basket</span>
                                                     </button>
                                                 }
@@ -129,7 +129,7 @@
                                                 }
                                                 else
                                                 {
-                                                    <button type="button" class="acart" style="color:white; background-color: grey" disabled>
+                                                    <button type="button" class="acart disabled-btn" disabled>
                                                         <span>Add to Basket</span>
                                                     </button>
                                                 }
