--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
@@ -59,7 +59,7 @@
                                         }
                                         else
                                         {
-                                            <button type="button" class="acart" style="color:white; background-color: grey" disabled>
+                                            <button type="button" class="acart disabled-btn" disabled>
                                                 <span>Add to Basket</span>
                                             </button>
                                         }
@@ -104,7 +104,7 @@
                                         }
                                         else
                                         {
-                                            <button type="button" class="acart" style="color:white; background-color: grey" disabled>
+                                            <button type="button" class="acart disabled-btn" disabled>
                                                 <span>Add to Basket</span>
                                             </button>
                                         }
@@ -149,7 +149,7 @@
                                         }
                                         else
                                         {
-                                            <button type="button" class="acart" style="color:white; background-color: grey" disabled>
+                                            <button type="button" class="acart disabled-btn" disabled>
                                                 <span>Add to Basket</span>
                                             </button>
                                         }
