--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
@@ -112,12 +112,29 @@
             {
                 foreach (var item in Model)
                 {
-            <ul class="breadcrumb">
-                <li><a href="/shop">Home</a></li>
-                <li><a href="#">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "Department Name")</a></li>
-                <li><a href="#">@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "Product Group")</a></li>
-                <li><a href="#">@(!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName) ? item.ProductCategory.ProductCategoryName : "Product Category")</a></li>
-            </ul>
+                    <ul class="breadcrumb">
+                        <li><a href="/shop">Home</a></li>
+                        @if (!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName))
+                        {
+                            <li><a href="@Url.Action("ProductCategories", "Products", new { department = @item.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</a></li>
+                        }
+                        @if (Url.Action() != Url.Action("ProductCategories", "Products", new { department = @item.TenantDepartment.DepartmentName }))
+                        {
+                            if (!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup))
+                            {
+                                <li><a href="@Url.Action("ProductCategories", "Products", new { productGroup = @item.ProductGroup.ProductGroup})">@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</a></li>
+                            }
+                        }
+                        @if (Url.Action() != Url.Action("ProductDetails", "Products", new { productId = @item.ProductId }))
+                        {
+                            if (!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName))
+                            {
+                                <li><a href="@Url.Action("ProductDetails", "Products", new { productId = @item.ProductId })">@(!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName) ? item.ProductCategory.ProductCategoryName : "")</a></li>
+                            }
+                        }
+
+
+                    </ul>
                     break;
                 }
             }
