Made some bug fixes to the navigation on ECommerce Imported from Changeset 2386

--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
@@ -7,7 +7,7 @@
     <div class="row">
         <div id="content" class="col-md-12 col-sm-12">
             <ul class="breadcrumb">
-                <li><a href="#">Home</a></li>
+                <li><a href="/shop">Home</a></li>
                 @if (!string.IsNullOrEmpty(Model?.TenantDepartment?.DepartmentName))
                 {
                     <li><a href="@Url.Action("ProductCategories", "Products", new { department = @Model.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(Model?.TenantDepartment?.DepartmentName) ? Model.TenantDepartment.DepartmentName : "")</a></li>
@@ -26,7 +26,7 @@
                         <li><a href="@Url.Action("ProductDetails", "Products", new { productId = @Model.ProductId })">@(!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName) ? Model.ProductCategory.ProductCategoryName : "")</a></li>
                     }
                 }
-                <li>@Model.Name></li>
+                <li>@Model.Name</li>
             </ul>
             <div class="row product-bg">
                 <div class="sticky">
