--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
@@ -4,7 +4,7 @@
 @using PagedList.Mvc;
 @{
     ViewBag.Title = "ProductCategories";
-   
+
     var UrlQuery = Request.Url.Query;
     string values = "";
     if (UrlQuery.Contains("values="))
@@ -20,7 +20,7 @@
 <div id="product-search" class="container custom-max-width">
     <div class="row">
         @Html.Hidden("valuesParameter", (string)values)
-        @Html.Action("_DynamicFilters", new {department=ViewBag.departmentId,groups= ViewBag.groupId,SubCategory=ViewBag.subcategory})
+        @Html.Action("_DynamicFilters", new { department = ViewBag.departmentId, groups = ViewBag.groupId, SubCategory = ViewBag.subcategory })
         <div id="content" class="col-md-9 col-sm-12">
             @if (Model != null)
             {
@@ -30,15 +30,31 @@
                         <li><a href="/shop">Home</a></li>
                         @if (!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName))
                         {
-                            <li><a href="@Url.Action("ProductCategories", "Products", new { department = @item.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</a></li>
+                            if (Url.Action() != Url.Action("ProductCategories", "Products", new { department = @item.TenantDepartment.DepartmentName }))
+                            {
+                                <li><a href="@Url.Action("ProductCategories", "Products", new { department = @item.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</a></li>
+                            }
+                            else
+                            {
+                                <li>@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</li>
+                            }
                         }
+
                         @if (Url.Action() != Url.Action("ProductCategories", "Products", new { department = @item.TenantDepartment.DepartmentName }))
                         {
                             if (!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup))
                             {
-                                <li><a href="@Url.Action("ProductCategories", "Products", new { productGroup = @item.ProductGroup.ProductGroup})">@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</a></li>
+                                if (Url.Action() != Url.Action("ProductDetails", "Products", new { productId = @item.ProductId }))
+                                {
+                                    <li>@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</li>
+                                }
+                                else
+                                {
+                                    <li><a href="@Url.Action("ProductCategories", "Products", new { productGroup = @item.ProductGroup.ProductGroup})">@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</a></li>
+                                }
                             }
                         }
+
                         @if (Url.Action() != Url.Action("ProductDetails", "Products", new { productId = @item.ProductId }))
                         {
                             if (!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName))
